# array_view

./: CMakeLists.txt  Doxyfile.in  README.md  config.cmake.in
src/jbms/: array_view.hpp  array_view.hpp.old  is_contiguous.hpp
test/: test_array_view.cpp
